    * The addArchive() source action now handles xpi archives. (CNY-1793)
    * Unknown flags are now ignored when calling loadRecipe w/ a flavor
      (before this would result in a traceback).

  o Update Changes:
    * Updates to groups are now allowed to be merged with other groups in 
      update jobs, reducing the number of jobs that are used for updates.
  o Client Changes:
    * Several commands, such as promote, update and rq, now take an
      --exact-flavors flag.  If specified, the flavors for each trove must
      match exactly - no system flavor or heuristic is used to find the trove
      you want.  (CNY-1829)

  o Bug Fixes:
    * The SQLite "ANALYZE" command is no longer run on local SQLite
      databases.  Any data stored by the "ANALYZE" command will be
      removed from the local database unless it is being accessed
      read-only.  Database performance is poor on databases with
      "ANALYZE" data in them. (CNY-778)

Changes in 1.1.32:
  o Client Changes:
    * A getDownloadSizes() method has been added to the ConaryClient
      object to determine the over-the-wire transfer size of the jobs
      in an UpdateJob object.  Call requires a single repository be
      the source of the entire update. (CNY-1757)

  o Server Changes:
    * A "infoOnly" parameter to has been added to the getChangeSet()
      repository method in protocol version 51. (CNY-1757)
    * The list of repository methods is now automatically generated
      instead of statically listed. (CNY-1781)
  
  o Bug Fixes:
    * The addSvnSnapshot() source action now uses the lookaside directory
      for generating the snapshot, instead of using the remote repository.
      (CNY-1777)
    * A bug that prevented unused entries in the Versions table of the
      system Conary database from being cleaned up after erasures has
      been fixed.
    * A bug that caused changes in the byDefault status of a trove to
      be omitted from local rollbacks has been fixed. (CNY-1796)
